# home

./: .coverage  .coverage.claudecode.pid11.XW4fHiux.H1uZ2HPpkgoh  .coverage.claudecode.pid17.XTUeYZex.HzZPrTJWRmwh  .coverage.claudecode.pid20.XWO8Recx.HnmRxpWeiixh  .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  build  docker-bake.hcl  fido  package-lock.json  package.json  pyproject.ruff.toml  pyproject.toml  pyproject.tools.toml  pyrightconfig.json  start.sh  sync-tasks.sh  task-cli.sh  work.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  generate_ci.py  pages.yml  rocq-python-extraction-image.yml  rocq-python-extraction.yml
_build/: .db  .digest-db  trace.csexp
docs/: CLAUDE.md  about.md  codex-provider.md
docs/_posts/: 2026-04-05-journal.md  2026-04-06-journal.md  2026-04-07-journal.md  2026-04-08-journal.md  2026-04-09-journal.md  2026-04-10-weekly-reflection.md  2026-04-11-journal.md  2026-04-12-journal.md  2026-04-13-journal.md  2026-04-14-journal.md  2026-04-15-journal.md  2026-04-16-journal.md  2026-04-17-journal.md  (+3 more)
kennel/: acp.py  cache_webhooks.py  claude.py  cli.py  color.py  config.py  copilotcli.py  events.py  fido_help.py  gemini.py  gh_status.py  github.py  hooks.py  infra.py  issue_cache.py  main.py  prompts.py  provider.py  provider_factory.py  registry.py  reply_promises.py  server.py  session_agent.py  state.py  status.py  tasks.py  tests_main.py  types.py  watchdog.py  worker.py
models/: BUG_MINED_INVARIANTS.md  Dockerfile  cancel_survives_respawn.v  ci_task_lifecycle.v  coord_index.v  dune  dune-project  handler_preemption.v  harness_commit_decision.v  pr_body_task_store.v  replied_comment_claims.v  reply_outbox_protocol.v  seed.v  self_restart.v  session_ownership_fifo.v  task_queue_rescope.v  thread_auto_resolve.v  turn_outcome.v  watchdog_transitions.v  webhook_command_translation.v  worker_claude_lifecycle.v
rocq-python-extraction/: DIAGNOSTICS.md  Dockerfile  Makefile  dune  export_generated_python.sh  export_pytest_generated.sh  g_python_extraction.mlg  python.ml  run_generated_pyright.sh  run_in_docker.sh
rocq-python-extraction/_build/: .db  .digest-db  trace.csexp
rocq-python-extraction/_build/default/: META.rocq-python-extraction  g_python_extraction.ml  rocq-python-extraction.dune-package  rocq_python_extraction_plugin.cma  rocq_python_extraction_plugin.cmxa  rocq_python_extraction_plugin.cmxs  rocq_python_extraction_plugin.ml-gen
rocq-python-extraction/_build/default/.merlin-conf/: lib-rocq-python-extraction
rocq-python-extraction/_build/default/.rocq_python_extraction_plugin.objs/: rocq_python_extraction_plugin__G_python_extraction.impl.d  rocq_python_extraction_plugin__Python.impl.d
rocq-python-extraction/_build/default/.rocq_python_extraction_plugin.objs/byte/: rocq_python_extraction_plugin.cmi  rocq_python_extraction_plugin.cmo  rocq_python_extraction_plugin.cmt  rocq_python_extraction_plugin__G_python_extraction.cmi  rocq_python_extraction_plugin__G_python_extraction.cmo  rocq_python_extraction_plugin__G_python_extraction.cmt  rocq_python_extraction_plugin__Python.cmi  rocq_python_extraction_plugin__Python.cmo  rocq_python_extraction_plugin__Python.cmt
rocq-python-extraction/_build/default/.rocq_python_extraction_plugin.objs/native/: rocq_python_extraction_plugin.cmx  rocq_python_extraction_plugin__G_python_extraction.cmx  rocq_python_extraction_plugin__Python.cmx
rocq-python-extraction/_build/default/test/: .PyExtractTest.theory.d  acceptance.glob  acceptance.vo
rocq-python-extraction/_build/install/default/lib/rocq-python-extraction/: META  dune-package  g_python_extraction.ml  opam  python.ml  rocq_python_extraction_plugin.cma  rocq_python_extraction_plugin.cmi  rocq_python_extraction_plugin.cmt  rocq_python_extraction_plugin.cmx  rocq_python_extraction_plugin.cmxa  rocq_python_extraction_plugin.cmxs  rocq_python_extraction_plugin.ml  rocq_python_extraction_plugin__G_python_extraction.cmi  rocq_python_extraction_plugin__G_python_extraction.cmt  rocq_python_extraction_plugin__G_python_extraction.cmx  rocq_python_extraction_plugin__Python.cmi  rocq_python_extraction_plugin__Python.cmt  rocq_python_extraction_plugin__Python.cmx
rocq-python-extraction/test/: acceptance.v  check_bintree_is_leaf.py  check_bool_not.py  check_coinductives.py  check_color_is_red.py  check_core_terms_syntax.py  check_even_depth.py  check_expr_is_num_pair.py  check_has_left3.py  check_is_even.py  check_list_add_one.py  check_list_map.py  check_mforest_is_empty.py  check_modules.py  check_mylist_is_empty.py  check_myopt_flatten.py  check_nat_double.py  check_ntree_is_leaf.py  check_option_inc.py  check_pair_swap.py  check_phase10.py  check_point5.py  check_proj_pair_r.py  check_roseforest_is_empty.py  check_stree_size.py  check_wf_countdown.py  coinductives.v  conftest.py  core_terms.v  datatypes.v  dune  finite_collections.v  generated_pyright_targets.txt  generated_pytest_targets.txt  modules.v  nested_patterns.v  numbers.v  phase2.v  phase3.v  phase4.v  (+30 more)
sub/: ci.md  comments.md  life.md  merge.md  persona.md  resume.md  setup.md  task.md
tests/: conftest.py  fakes.py  test___main__.py  test_acp.py  test_build_wrapper.py  test_cache_webhooks.py  test_chat.py  test_ci_task_lifecycle.py  test_claude.py  test_claude_hold_for_handler.py  test_claude_preempt_kind.py  test_claude_stream_fsm_oracle.py  test_cli.py  test_codex.py  test_color.py  test_comment_cache.py  test_config.py  test_copilot_hold_for_handler.py  test_copilotcli.py  test_coverage_fills.py  test_critics.py  test_events.py  test_extraction_diagnostics_catalogue.py  test_fido_help.py  test_frozen.py  test_gemini.py  test_gh_status.py  test_github.py  test_handler_preemption_oracle.py  test_harness_commit.py  test_hooks.py  test_idle_timeout.py  test_infra.py  test_issue_cache.py  test_live_provider_stats.py  test_main.py  test_pr_body_task_store_oracle.py  test_prompts.py  test_provider.py  test_provider_factory.py  (+38 more)
tools/: build_graph.sh  check_no_monkeypatch_setattr.py  codex_appserver_smoke.py  compose_pyproject.py  gen_workflows.py
(+168 files in other folders)
