(library
 (name rocq_python_extraction_plugin)
 (public_name rocq-python-extraction)
 (synopsis "Rocq → Python extraction plugin")
 (flags :standard -rectypes -open Extraction_plugin)
 (libraries
  rocq-runtime.plugins.extraction
  rocq-runtime.interp
  rocq-runtime.vernac))

(rule
 (targets g_python_extraction.ml)
 (deps    (:mlg g_python_extraction.mlg))
 (action  (chdir %{project_root} (run rocq pp-mlg %{deps}))))

; Validate that every .py produced by the acceptance theory is syntactically
; valid Python. These files are written as side-effects of the rocq.theory
; build and land in the project's build root (_build/default/). The umbrella
; python.vo is listed as a dep so dune builds the whole acceptance suite first;
; the .py files exist in the same build pass before dune's next-invocation
; cleanup removes undeclared artifacts.
(rule
 (alias runtest)
 (deps test/python.vo test/check_core_terms_syntax.py test/check_support.py)
 (action (bash "python3 %{dep:test/check_core_terms_syntax.py}")))

; Primitive round-trip tests: extracted(f(x)) == expected(x) for each primitive.
; Primitives covered: bool, nat, option, prod, list.
(rule
 (alias runtest)
 (deps test/python.vo
       test/check_support.py
       test/check_bool_not.py
       test/check_nat_double.py
       test/check_option_inc.py
       test/check_pair_swap.py
       test/check_list_add_one.py)
 (action
  (progn
   (run python3 %{dep:test/check_bool_not.py})
   (run python3 %{dep:test/check_nat_double.py})
   (run python3 %{dep:test/check_option_inc.py})
   (run python3 %{dep:test/check_pair_swap.py})
   (run python3 %{dep:test/check_list_add_one.py}))))

; Datatype round-trip tests: inductive datatype emission.
; Inductives covered: MyList, BinTree, RoseTree/RoseForest (mutual parameterised),
; MTree/MForest (mutual), MyOpt, Even/Odd (mutual Dfix), is_even/is_odd (Dfix over
; remapped nat), NTree (nested), STree/DTree (mutual non-list), color (PEP 8 casing).
(rule
 (alias runtest)
 (deps test/python.vo
       test/check_support.py
       test/check_mylist_is_empty.py
       test/check_bintree_is_leaf.py
       test/check_roseforest_is_empty.py
       test/check_mforest_is_empty.py
       test/check_myopt_flatten.py
       test/check_even_depth.py
       test/check_is_even.py
       test/check_ntree_is_leaf.py
       test/check_stree_size.py
       test/check_color_is_red.py)
 (action
  (progn
   (run python3 %{dep:test/check_mylist_is_empty.py})
   (run python3 %{dep:test/check_bintree_is_leaf.py})
   (run python3 %{dep:test/check_roseforest_is_empty.py})
   (run python3 %{dep:test/check_mforest_is_empty.py})
   (run python3 %{dep:test/check_myopt_flatten.py})
   (run python3 %{dep:test/check_even_depth.py})
   (run python3 %{dep:test/check_is_even.py})
   (run python3 %{dep:test/check_ntree_is_leaf.py})
   (run python3 %{dep:test/check_stree_size.py})
   (run python3 %{dep:test/check_color_is_red.py}))))

; Nested-pattern round-trip tests.
; Exercises: 3-level deep nested constructor patterns (has_left3) and
; cross-type nested patterns across a mutual Expr/Val inductive (expr_is_num_pair).
(rule
 (alias runtest)
 (deps test/python.vo
       test/check_support.py
       test/check_has_left3.py
       test/check_expr_is_num_pair.py)
 (action
  (progn
   (run python3 %{dep:test/check_has_left3.py})
   (run python3 %{dep:test/check_expr_is_num_pair.py}))))

; Record-projection round-trip tests (issue #720).
; 2-field record: basic projection (first field, second field) and field-swap
;   construction — verifies MLcase Record → attribute-access lambda-lift.
; 5-field record: all 5 named fields accessible by name — the acceptance
;   criterion that record projections use readable Python identifiers, not
;   positional _0/_1/… names.
(rule
 (alias runtest)
 (deps test/python.vo
       test/check_support.py
       test/check_proj_pair_r.py
       test/check_point5.py)
 (action
  (progn
   (run python3 %{dep:test/check_proj_pair_r.py})
   (run python3 %{dep:test/check_point5.py}))))

; Well-founded recursion round-trip test: Program Fixpoint should
; extract without visible accessibility/proof scaffolding (issue #721).
(rule
 (alias runtest)
 (deps test/python.vo
       test/check_support.py
       test/check_wf_countdown.py)
 (action (run python3 %{dep:test/check_wf_countdown.py})))

; Polymorphism round-trip test: rank-1 list_map should extract with
; real TypeVars and pass pyright in the Docker-backed CI image (issue #722).
(rule
 (alias runtest)
 (deps test/python.vo
       test/check_support.py
       test/check_list_map.py)
 (action (run python3 %{dep:test/check_list_map.py})))

; Coinductive round-trip test: streams should expose an iterator
; surface while non-stream coinductives stay lazily forceable (issue #723).
(rule
 (alias runtest)
 (deps test/python.vo
       test/check_support.py
       test/check_coinductives.py)
 (action (run python3 %{dep:test/check_coinductives.py})))

; Module/functor round-trip test: modules, module types, and functor application
; should extract to typed Python namespace objects (issue #724).
(rule
 (alias runtest)
 (deps test/python.vo
       test/check_support.py
       test/check_modules.py)
 (action (run python3 %{dep:test/check_modules.py})))
