(rocq.theory
 (name PyExtractTest)
 (synopsis "Phase 2–8 acceptance tests — core terms, primitive remapping, datatypes, nested patterns, records, Acc-erasure, and polymorphism")
 (plugins rocq-python-extraction)
 (theories Stdlib)
 (modules acceptance phase2 phase3 phase4 phase5 phase6 phase7 phase8))
